# Carpos_Integration

./: README.md  perception_node.py
AMG_CARPOS_node/: CMakeLists (copy).txt  CMakeLists.txt  CSRL_control.py  CSRL_orientation_prev.py  CSRL_trajectory.py  carpos_amg_node (copy).py  carpos_amg_node.py  carpos_amg_node_with_scaling.py  carpos_amg_node_with_scaling_andForce.py  graspPose.mat  package.xml  robot_test_control.py  test_trajectory.py
AMG_CARPOS_node/msg/: amg_message.msg
Active_perception_CARPOS_node/: CMakeLists.txt  Message.odg  carpos_active_perception_node.py  carpos_active_perception_node_with_scaling.py  create_fake_graspPose.py  grasp_active_perception.py  nullspace_example.py  package.xml  pinhole.py  vision_aux.py
CSRL_base/: CSRL_orientation.py
CSRL_dmpy/: dmpSE3.py
carpos_gui/: index.html
gripper_control/: CMakeLists.txt  package.xml
keypoint_detector/: CMakeLists.txt  package.xml
kinesthetics_CARPOS_node/: CMakeLists.txt  Logging_kinesthetic.mat  carpos_kinesthetics_node.py  carpos_kinesthetics_node_withForceEnc.py  package.xml  stop_robot.py
logger/: CMakeLists.txt  package.xml
occlusion_detection/: occlusion_analysis.py  occlusion_detection.py  occlusion_detection_data.py
odom_processor/: CMakeLists.txt  create_dummy_data.py  harvest_motion_node.py  oldold.txt  package.xml
perception_node/: CMakeLists.txt  package.xml
robot_description/: package.xml
rosbag_gripper_pose/: 2025-08-27-14-07-46.bag  2025-08-27-14-14-17.bag  2025-08-27-14-19-22.bag  2025-08-27-14-21-30.bag  2025-08-27-14-23-06.bag  2025-08-27-14-28-07.bag
(+123 files in other folders)
